# dining_checker

./: .gitignore  Cargo.toml
src/: main.rs
src/cli_arguments/: mod.rs
src/constants/: mod.rs
src/notification/: mod.rs
templates/: email.txt
