[package]
name = "check_dining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
gitlab = "0.1505.0"
owo-colors = "3.5.0"
regex = "1.6.0"
serde = { version = "1.0.147", features = ["serde_derive"] }