[package]
name = "check_dining"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive", "cargo"] }
once_cell = "1.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.10.4", features = ["builder", "tokio1-native-tls"]}
tokio = { version = "1.29.1", features = ["full"] }